--- a/app/views/notes/index.html.slim
+++ b/app/views/notes/index.html.slim
@@ -53,7 +53,7 @@
     h1.page-title.float-left.ml-5 Notes
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border タスクノート
   div.container.px-0
-    div.text-center.border.mt-3.w-60.mx-auto
+    div.text-center.border-bottom.border-top.border-right.border-left.mt-3.w-60.mx-auto
       div#search-notes.anchor
         p.font-SoukouMincho.mb-0 Note検索
       div
