--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,9 +29,11 @@
 }
 
 
+
 html{
  font-size: calc(100vw / 80);
 }
+
 
 .anchor-mission{
  margin-top: -5%;
@@ -233,7 +235,7 @@ img.bg-image-chara{
 
 .enemy-task-title{
  position: absolute;
- top: 37%;
+ top: 37.5%;
  right: -7%;
  width: 50%;
  height: auto;
@@ -966,11 +968,17 @@ input[type="file"] {
  }
 }
 
-.btn-style-md-border{
+.border{
  width: 25%;
  height: 40px;
  position: relative;
 }
+
+.btn-style-md-border{
+  width: 25%;
+  height: 40px;
+  position: relative;
+ }
 
 .btn-style-md-border::before{
  content: '';
@@ -1560,6 +1568,242 @@ $z: 1;
  cursor: pointer;
 }
 
-.red-p{
-  color: red;
+.balloon1-right {
+  position: relative;
+  display: inline-block;
+  width: 200px;
+  margin: 1.5em 15px 1.5em 0;
+  padding: 7px 10px;
+  color: rgb(235, 235, 235);
+  font-size: 16px;
+  background: rgba(154, 147, 131, 0.7);
+}
+
+.balloon1-right:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-left: 15px solid rgba(154, 147, 131, 0.7);
+}
+
+.balloon1-right p {
+  margin: 0;
+  padding: 0;
+}
+
+.partner-info{
+  width: 170px;
+}
+
+
+.home-title-group{
+  z-index: 2;
+  position: absolute;
+  top: 25%;
+  left: 11%;
+}
+
+.home-title{
+  font-size: 110px;
+  color: #313131;
+}
+
+.home-sub-title{
+  font-size: 40px;
+  color: #2c2c2c;
+  text-decoration: none;
+
+  &:hover{
+    color: #202020;
+    text-decoration: none;
+  }
+}
+
+.welcome-info1{
+  position: absolute;
+  top: 20%;
+  left: 34%;
+  width: 50%;
+  text-align: center;
+  font-size: 18px;
+}
+
+.welcome-info2{
+  position: absolute;
+  top: 35%;
+  left: 8%;
+  width: 50%;
+  text-align: center;
+  font-size: 18px
+}
+
+.welcome-info3{
+  position: absolute;
+  top: 23%;
+  left: 32%;
+  width: 50%;
+  text-align: center;
+  font-size: 18px
+}
+
+.welcome-info-frame1{
+  width: 80%;
+}
+
+.welcome-info-frame2{
+  width: 65%;
+}
+
+.welcome-info-frame3{
+  width: 75%;
+}
+
+.home-sub-title::after{
+  @include btn-move-after(15px, 20px, 20%, -50px);
+  display: none;
+ }
+ 
+ .home-sub-title:hover::after{
+  @include btn-move-after(15px, 20px, 20%, -50px);
+  @include btn-movement;
+ }
+
+@media (max-width: 420px) {
+  .home-title-group{
+    z-index: 2;
+    position: absolute;
+    top: 10%;
+    left: 8%;
+  }
+
+  .home-title{
+    font-size: 50px;
+  }
+
+  .home-sub-title{
+    font-size: 20px;
+    color: #2c2c2c;
+    text-decoration: none;
+  
+    &:hover{
+      color: #202020;
+      text-decoration: none;
+    }
+  }
+
+  .home-sub-title::after{
+    @include btn-move-after(7px, 10px, 20%, 20px);
+    display: none;
+   }
+   
+   .home-sub-title:hover::after{
+    @include btn-move-after(7px, 10px, 20%, 20px);
+    @include btn-movement;
+   }
+  
+  .partner-info{
+    width: 130px;
+  }
+
+  .balloon1-right {
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    margin: 1.5em 15px 1.5em 0;
+    padding: 7px 10px;
+    color: rgb(235, 235, 235);
+    font-size: 13px;
+    background: rgba(154, 147, 131, 0.7);
+  }
+
+  .balloon1-right:before {
+    content: "";
+    position: absolute;
+    top: 20%;
+    left: 100%;
+    margin-top: -15px;
+    border: 15px solid transparent;
+    border-left: 15px solid rgba(154, 147, 131, 0.7);
+  }
+
+  .welcome-info1{
+    position: absolute;
+    top: 20%;
+    left: 24%;
+    width: 50%;
+    text-align: center;
+    font-size: 8px;
+  }
+  
+  .welcome-info2{
+    position: absolute;
+    top: 35%;
+    left: 20%;
+    width: 50%;
+    text-align: center;
+    font-size: 8px
+  }
+  
+  .welcome-info3{
+    position: absolute;
+    top: 23%;
+    left: 8%;
+    width: 70%;
+    text-align: center;
+    font-size: 8px
+  }
+
+  .welcome-info-frame1{
+    width: 100%;
+  }
+  
+  .welcome-info-frame2{
+    width: 85%;
+  }
+  
+  .welcome-info-frame3{
+    width: 100%;
+  }
+}
+@media (max-width: 375px) {
+  .welcome-info1{
+    position: absolute;
+    top: 20%;
+    left: 12%;
+    width: 60%;
+    text-align: center;
+    font-size: 7px;
+  }
+  
+  .welcome-info2{
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    text-align: center;
+    font-size: 7px
+  }
+  
+  .welcome-info3{
+    position: absolute;
+    top: 23%;
+    left: 2%;
+    width: 75%;
+    text-align: center;
+    font-size: 7px
+  }
+  .welcome-info-frame1{
+    width: 110%;
+  }
+  
+  .welcome-info-frame2{
+    width: 95%;
+  }
+  
+  .welcome-info-frame3{
+    width: 110%;
+  }
 }
