--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1169,7 +1169,7 @@ $font: 13;
  transform: rotate( -45deg );
 };
 
-.card--footer{
+.card-footer{
  background-color: #989898;
  border:none;
  p{
@@ -1178,7 +1178,7 @@ $font: 13;
 }
 
 .card-header{
-  background-color: #505050;
+  background-color: #989898;
 }
 
 .card-body{
