--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -7,7 +7,10 @@
   div.container-field.mt-5.mx-3.pt-5
     div.row
       div.mt-2.col-md-2.text-center
-        = image_tag @user.avatar(:icon), class: 'icon-size'
+        - if @user.avatar.present?
+          = image_tag @user.avatar(:icon), class: 'icon-size'
+        - else
+          = image_tag '/images/avatar2.png', class: 'icon-size'
       div.col-md-7.mb-5
         div.d-flex.border-b.my-3.align-items-center
           div.w-30
