--- a/app/views/layouts/_profile_modal.html.slim
+++ b/app/views/layouts/_profile_modal.html.slim
@@ -15,7 +15,7 @@
                   div.col-md-3
                     div.form-group.mb-1.text-center
                       div.icon_preview.w-100.text-center
-                        - if user.avatar.present?
+                        - if user.icon.present?
                           = image_tag user.avatar(:icon), class: 'edit-icon-size mx-auto mb-3'
                         - else
                           = image_tag '/images/avatar2.png', class: 'edit-icon-size mx-auto mb-3'
