--- a/app/views/shared/_login_header.html.slim
+++ b/app/views/shared/_login_header.html.slim
@@ -13,7 +13,7 @@ div.font-ferrum.d-flex.my-3.mx-5.border-b.z-in-5.justify-content-end
         = link_to "#{@my_mission.title.truncate(15)}", mission_tasks_path(@my_mission), class: "not-link-decoration header-menu-style font-SoukouMincho"
   
   div.w-25.d-block.d-flex.justify-content-between.position-relative.header-position.align-items-center type="button" data-toggle="collapse" data-target="#menu"
-    - if current_user.avatar.present?
+    - if current_user.icon.present?
       = image_tag current_user.avatar(:icon), class: 'small-icon-size w-15'
     - else
       = image_tag '/images/avatar2.png', class: 'small-icon-size w-15'
