--- a/app/views/layouts/_profile_modal.html.slim
+++ b/app/views/layouts/_profile_modal.html.slim
@@ -16,7 +16,8 @@
                     div.form-group.mb-1.text-center
                       div.icon_preview.w-100.text-center
                         = image_tag user.avatar(:icon), class: 'edit-icon-size mx-auto mb-3'
-                      = f.label :icon, '画像を選択', class: "icon-btn-style"
+                      div.text-center.w-100
+                        = f.label :icon, '画像を選択', class: "icon-btn-style"
                       = f.file_field :icon, class: "btn-style-image"
                   div.col-md-9
                     div.form-group.mb-1
