--- a/app/views/user_mailer/reset_password_email.text.slim
+++ b/app/views/user_mailer/reset_password_email.text.slim
@@ -1,7 +1,7 @@
-#{ @user.name }様
-StudyQuestをご利用いただき誠にありがとうございます。
-パスワード変更用のメールをお送りいたしました。
-下記のURLからパスワードの再設定を行って下さい。
+p #{ @user.name }様
+p StudyQuestをご利用いただき誠にありがとうございます。
+p　パスワード変更用のメールをお送りいたしました。
+p 下記のURLからパスワードの再設定を行って下さい。
 
-【URL】
+p【URL】
 = @url
