パスワードリセットボタンのデザイン修正

--- a/app/views/password_resets/edit.html.slim
+++ b/app/views/password_resets/edit.html.slim
@@ -25,4 +25,4 @@ div.container.w-75
           = f.password_field :password_confirmation, class: 'form-style', id: 'reset_password_confirmation', style: "border-radius: 0!important; -webkit-appearance:none;",autocomplete: "off"
         div.btn-style-lg-border.mx-auto.mt-5
           div.form-group.text-center.form-group-height
-            = f.submit '再設定', class: 'btn-style-lg font-SoukouMincho'
+            = f.submit 'RESET', class: 'btn-style-lg'
