--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,13 @@
 doctype html
 html
   head
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYDP6XPGH3"></script>
+    javascript:
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CYDP6XPGH3'); 
     title
       = full_title(yield(:title))
     = csrf_meta_tags
