[ADD]テストログイン機能の追加

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,6 +7,9 @@ div.home-title-group
        = link_to 'Sign up', new_users_path, class: 'font-ferrum home-sub-title'
     div.position-relative
       = link_to 'Login', login_path, class: 'font-ferrum home-sub-title'
+  div.d-flex.justify-content-center
+    div.position-relative.mt-3
+      = link_to '体験版モード', testlogin_path, class: 'font-SoukouMincho home-sub-title'
 div
   = image_tag '/images/bgimage.jpg', class: 'w-100'
   div.container-fluid.mb-3
