--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -80,10 +80,21 @@ div
         div.col-md-8
           div.form-style.my-3
             div.d-flex.justify-content-start.my-2.ml-2.align-items-center
+              p.font-ferrum.mb-0 5/27　
+              p.font-SoukouMincho.mb-0 体験版モードを追加
+              h2.mb-0.ml-auto.mr-2.cursor-pointer −
+            div
+              p.w-90.mx-auto すぐにタスクを作成できるように体験版モードを追加しました。体験版モードはタスク作成のみが体験できます。
+        div.col-md-2
+      div.row
+        div.col-md-2
+        div.col-md-8
+          div.form-style.my-3
+            div.d-flex.justify-content-start.my-2.ml-2.align-items-center
               p.font-ferrum.mb-0 TaskQuest
               p.font-SoukouMincho.mb-0 へようこそ
-              h2#info-slide2.mb-0.ml-auto.mr-2.cursor-pointer −
-            div#info-slide-menu2
+              h2.mb-0.ml-auto.mr-2.cursor-pointer −
+            div
               p.w-90.mx-auto TaskQuestへようこそ！TaskQuestはまるでゲームをプレイするような感覚で普段のタスク管理を行えるアプリです。TaskQuestを使って楽しくタスク管理をしましょう！！
         div.col-md-2
   #help.container-fluid.mb-3
