[FIX]テストログインの編集

--- a/app/views/shared/_login_header.html.slim
+++ b/app/views/shared/_login_header.html.slim
@@ -19,7 +19,7 @@ div.font-ferrum.d-flex.my-3.mx-5.border-b.z-in-5.justify-content-end
         p.text-center.mx-2.mb-0.font-SoukouMincho.fontsize-10 #{current_user.name}さん
 div#menu.collapse.z-in-1.header-dropdown-position.w-80.text-center
   div.w-80.mx-auto
-    - if current_user.name != "テストユーザー"
+    - if current_user.name != "体験版テストユーザー"
       div.dropdown-style
         a.js-modal-open.font-SoukouMincho href="" data-target="modal01" プロフィール編集
     div.dropdown-style.font-SoukouMincho
