--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -22,16 +22,12 @@
     EnemyNumber.innerHTML = "";
   }, 1600);
   
-  
-  
 <% end %>
 <% if @status == 'fail' %>
-  $('#task_errors_start_date').html("<%= j(render 'task_errors_start_date') %>");
-  $('#task_errors_end_date').html("<%= j(render 'task_errors_end_date') %>");
-  <% if @error_dates.present?%>
+  <% if @task.errors.present?%>
     $('#task_count_error').html("<%= j(render 'task_count_error') %>");
   <% end %>
-<% end %>
-<% if @status == 'fail_today_task' %>
-  $('#task_count_error').html("<%= j(render 'today_task_count_error') %>");
+  <% if @tasks.count == 10 %>
+    $('#task_count_error').html("<%= j(render 'today_task_count_error') %>");
+  <% end %>
 <% end %>
