--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -5,8 +5,8 @@
     h1.page-title.float-left.ml-5 Task play
     p.ml-3.d-flex.align-items-center.mt-2.page-title-sub.head-border タスクプレイ
   div.bass-image.position-relative id="js-filter"
-    = image_tag "/images/背景.png", class: "w-100"
-    = image_tag "/images/背景（ライト）.gif", class: "w-100 bg-image-light"
+    = image_tag "/images/background.png", class: "w-100"
+    = image_tag "/images/background-light.gif", class: "w-100 bg-image-light"
     div.chara_img.font-SoukouMincho
       = image_tag "/images/hero-meter.png", class:"w-100"
       p.mission_info.z-in-2.d-flex.text-center.mb-0.fontsize-10.ml-1 #{@mission.title.truncate(20)}
